fix: Sub-pages overflow fix
top of mobile devices show body color instead of the image

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -33,7 +33,7 @@ body {
 }
 
 .allow-scroll {
-  overflow-y: auto !important;
+  overflow: auto !important;
   -webkit-overflow-scrolling: touch; /* For smoother scrolling on iOS */
 }
 
